small change to test credentials

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -18,7 +18,7 @@
 <div class="article-summary">
     <div class="date-line">{{ article.locale_date }}, by {{ article.author }}</div>
     <h4>
-        <a href="{{ SITEURL }}/{{ article.url }}" rel=Bookmark title="Permalink to {{ article.title | striptags }}">{{ article.title }}</a>
+        <a href="{{ SITEURL }}/{{ article.url }}" rel=Bookmark title="Permalink to {{ article.title | striptags }}">{{ article.title }}!!!!</a>
     </h4>
     <div style="padding-left:25px">{{ article.summary }}</div>
     
