--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,37 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-
-    <!-- Google Analytics Tracking -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-74344100-1', 'auto');
-      ga('send', 'pageview');
-    </script>
     
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{SITEURL}}/theme/css/plugins/bootstrap.min.css">
 
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="{{SITEURL}}/theme/js/plugins/jquery.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{{SITEURL}}/theme/js/plugins/bootstrap.min.js"></script>
     
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/foundation.min.css" media="all">
-    <script type="text/javascript" src="{{ SITEURL }}/theme/js/modernizr.js"></script>
-    <script type="text/javascript" src="{{ SITEURL }}/theme/js/general.js"></script>
+    <!-- webstie css -->
+    <link rel="stylesheet" href="{{SITEURL}}/theme/css/main.css">
+    <link rel="stylesheet" href="{{SITEURL}}/theme/css/panel.css">
+    <link rel="stylesheet" href="{{SITEURL}}/theme/css/map.css">
+    
+    <!--  ADD GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Carter+One|Lato|Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
     
     
-    <link href='https://fonts.googleapis.com/css?family=Exo+2:400,300,700,300italic,400italic,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/lamboz.css" media="all">
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/legiontheme.css" media="all">
     {% block head %}
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
     <meta charset="utf-8" />
@@ -65,90 +54,39 @@
 </head>
 <body>
     <div class="content">
-        <div class="container main-container">
-            <div class="row main-row">
-                <div class="pages">
-                    <ul style="text-align:center; margin-bottom:0 !important;">
-                        {% for p in pages|sort(attribute='sortorder') %}
-                            {% if p.title == "Slervices" %}
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown">{{ p.title }} <b class="caret"></b></a></a>
-                                <ul class="dropdown-menu">
-                                {% for t,l in SERVICES_PAGES %}
-                                    <li><a href="{{l}}">{{t}}</a></li>
-                                {% endfor %}
-                                </ul>
-                            </li>
-                            {% else %}
-                            <li {% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-            {% block pageheader %}
-            <div class="row main-row">
-                <div class="hp-header-inner">
-                    <div class="page-header">
-                        <div class="content-header">
-                            <div id="title-block">
-                            <h1>Legion GIS</h1>
-                            <p class="blurb">{{ SITESUBTITLE }}</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endblock %}
-            <div class="row content-row" style="padding:20px 0px;">
-                    <div class="container">
-                        <div class="row">
-                           <div class="col-sm-12 col-md-10">
-                                {% block content %}
-                                {% endblock %}
-                            </div>
-                            <div class="hidden-xs hidden-sm col-md-2">
-                                <h5>Shortcuts</h5>
-                                <ul class="links">
-                                    {% for title,link in SERVICES_PAGES %}
-                                    <li><a href="{{ link }}">{{ title }}</a></li>
-                                    {% endfor %}
-                                    <li><a href="{{ SITEURL }}/pages/introduction-to-gis.html">Intro QGIS Class</a></li>
-                                </ul>
-                                <h5>Our Tools</h5>
-                                <ul class="links">
-                                    {% for title,link in LINKS %}
-                                    <li><a href="{{ link }}">{{ title }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                                <h5>Blog Feeds</h5>
-                                <ul class="links">
-                                    {% if FEED_ALL_ATOM %}
-                                    <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" rel="alternate">Atom</a></li>
-                                    {% endif %}
-                                    {% if FEED_ALL_RSS %}
-                                    <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" rel="alternate">RSS</a></li>
-                                    {% endif %}
-                                </ul>
-                                
-                            </div>
-                        </div>
-                    </div>
-            </div>
-        </div>
-    </div>
-    <div class="footer" style="text-align:center">
         <div class="container">
+            <div class="row topbar hidden-xs">
+                {% for p in pages|sort(attribute='sortorder') %}
+                    <a href="{{SITEURL}}/{{ p.url }}">
+                        <div class="col-xs-12 col-sm-4 nav-btn {% if p == page %} active {% endif %}" {% if loop.first %} style="border-bottom-left-radius:7px" {% endif %} {% if loop.last %} style="border-bottom-right-radius:7px" {% endif %}><h4>{{ p.title }}</h4></div>
+
+                    </a>
+                {% endfor %}
+            </div>
+            <div class="row topbar hidden-sm hidden-md hidden-lg">
+                {% for p in pages|sort(attribute='sortorder') %}
+                    <a href="{{SITEURL}}/{{ p.url }}">
+                        <div class="col-xs-12 col-sm-4 nav-btn {% if p == page %} active {% endif %} {% if loop.last %} mobile-last {% endif %}" {% if loop.first %} style="border-top:solid 2px black" {% endif %}><h4>{{ p.title }}</h4></div>
+                    </a>
+                {% endfor %}
+            </div>
+            <div class="row">
+               <div class="col-xs-12">
+                    {% block pageheader %}
+                    {% endblock %}
+                </div>
+            </div>
+            <div class="row">
+               <div class="col-xs-12">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+        <hr>
             {% block footer %}
             <div class="row" style="padding:15px 0px; margin-left:0px; margin-right:0px; max-width:none;">
-                <div class="col-sm-4">
-                    <p>Site updated {{PUBLISH_DATE}} (<a href="https://github.com/mradamcox/legiongis-pelicansite/commits/master">view commits</a>)</p>
-                </div>
-                <div class="col-sm-4">
-                    <p><a id="email-address"></a> | 608-606-9928</p>
-                </div>
-                <div class="col-sm-4">
-                    {% include 'credits.html' %}
+                <div class="col-sm-12">
+                    <p style="font-size:small">site last updated {{PUBLISH_DATE}} | powered by <a href="http://getpelican.com/">pelican</a> | unnamed theme</p>
                 </div>
             </div>
             {% endblock %}
@@ -157,9 +95,9 @@
         </div>
     </div>
     <script>
-        var c1 = "info";
+        var c1 = "mr.adamcox";
         var c2 = "@";
-        var c3 = "legiongis.com";
+        var c3 = "gmail.com";
         var email = c1+c2+c3
         $(document).ready(function() {
             document.getElementById('email-address').textContent = email;
