--- a/theme/templates/blog.html
+++ b/theme/templates/blog.html
@@ -2,57 +2,20 @@
 {% block title %}{{ page.title }}{%endblock%}
 
 {% block pageheader %}
-<div class="hp-header-inner">
-    <div class="page-header">
-        <div class="content-header">
-            <div id="title-block">
-            <h1>{{ page.title }}</h1>
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
 {% block content %}
 
 <div class="row">
-    <div class="col-sm-6">
-        <p>Our blog is where we get to talk about our inspirations and aspirations. We like sharing project news, technical guides, data resources, and maybe some things that are actually entertaining as well. Join our mailing list to stay tuned!</p>
+    <div class="col-xs-12">
+        <h3>{{ dates.0.title }}</h3>
+        <h4>{{ dates.0.locale_date }}</h4>
+        {{dates.0.content}}
     </div>
-    <div class="col-sm-6">
-        <!-- Begin MailChimp Signup Form -->
-        <div id="mc_embed_signup">
-            <form action="//legiongis.us13.list-manage.com/subscribe/post?u=8cd0850e106b744b6dd3ddde4&amp;id=9ea6be86e6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding:0px" novalidate>
-                <div id="mc_embed_signup_scroll">
-                    <div class="mc-field-group" style="padding-bottom:0px;">
-                        <label for="mce-EMAIL">Email Address </label>
-                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="width:300px;">
-                    
-                        <div class="mc-field-group input-group">
-                            <ul style="margin-bottom:3px !important;padding-top:0px;">
-                                <li>
-                                    <input type="checkbox" value="1" name="group[2253][1]" id="mce-group[2253]-2253-0">
-                                    <label for="mce-group[2253]-2253-0" style="font-weight:normal;"><em>&nbsp;&nbsp;only interested in Arches-related posts</em></label>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8cd0850e106b744b6dd3ddde4_9ea6be86e6" tabindex="-1" value=""></div>
-                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <!--End mc_embed_signup-->
 </div>
 
 <hr>
 
-
-<h3>Archives</h3>
+<h4>OLD POSTS</h4>
 
 <dl>
 {% for article in dates %}
