remove nrhp map from projects page

--- a/theme/templates/projects.html
+++ b/theme/templates/projects.html
@@ -10,7 +10,7 @@
         <p><i>Basic mockups for various projects, functionality not guaranteed...</i></p>
         <p><b><a href="{{SITEURL}}/maps/natchitoches_parish.html">Natchitoches Parish Historic Maps</a></b><br>This was a testing ground for the historic map overlays and extra basemaps that I included in the Cane River Heritage Inventory & Map.</p>
         <p><b><a href="{{SITEURL}}/maps/vernon_county.html">Vernon County</a></b><br>This map features a few special layers related to Vernon County and Wisconsin: a 1967 US Army Corps of Engineers map of Kickapoo Valley Reserve, a LiDAR-derived relief basemap, and the Wisconsin Geologic Map lithology layer.</p>
-        <p><b><a href="{{SITEURL}}/maps/nrhp_bldgpt.html">NRHP (buildings)</a></b><br>This was a quick test to show all of the building points in the National Register of Historic Places spatial dataset that was created by CR-GIS (NPS).</p><!--Also a quick test of displaying information with .getGetFeatureInfoUrl()</p>-->
+        <!--<p><b><a href="{{SITEURL}}/maps/nrhp_bldgpt.html">NRHP (buildings)</a></b><br>This was a quick test to show all of the building points in the National Register of Historic Places spatial dataset that was created by CR-GIS (NPS).</p>--><!--Also a quick test of displaying information with .getGetFeatureInfoUrl()</p>-->
         <p><b><a href="{{SITEURL}}/maps/afrh_historicmaps.html">AFRH Historic Maps</a></b><br>Staging ground for current work on Armed Forces Retirement Home historic map overlays.  These will be used in the new Arches installation for the AFRH.</p>
     </div>
     <hr>
