--- a/theme/static/css/map.css
+++ b/theme/static/css/map.css
@@ -147,3 +147,8 @@ button.selected {
     width: 855px;
     background-color: rgba(255, 255, 255, 0.6);
 }
+
+.map-note {
+    display:none;
+    margin-bottom:0px;
+}
