--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -30,9 +30,7 @@ p {
     background-color: #F8F7BF;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
-    border-right: black 2px solid;
-    border-bottom: black 2px solid;
-    border-left: black 2px solid;
+    box-shadow: 0px 0px 2px 2px #333;
 }
 
 .content {
@@ -43,6 +41,9 @@ p {
 .topbar{
     z-index: 1;
     border: none;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+    box-shadow: 0px 0px 2px 1px #333;
 }
 
 .toplist {
