--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -82,16 +82,15 @@
                     {% endblock %}
                 </div>
             </div>
-        <hr>
+            <hr>
             {% block footer %}
-            <div class="row" style="padding:15px 0px; margin-left:0px; margin-right:0px; max-width:none;">
+            <div class="row footer-row">
                 <div class="col-sm-12">
-                    <p style="font-size:small">site last updated {{PUBLISH_DATE}} | powered by <a href="http://getpelican.com/">pelican</a> | unnamed theme</p>
+                    <p style="font-size:small"><a href="https://github.com/mradamcox">github</a> ~ <a href="https://observablehq.com/@mradamcox">observable</a> ~ <a href="https://www.twitter.com/mradamcox">twitter</a> ~ <a href="https://www.linkedin.com/in/mradamcox">linkedin</a> | updated {{PUBLISH_DATE}} | site powered by <a href="http://getpelican.com/">pelican</a></p>
                 </div>
             </div>
             {% endblock %}
             </div>
-            {% include 'trademark.html' %}
         </div>
     </div>
     <script>
