improve recording titles

--- a/theme/templates/projects.html
+++ b/theme/templates/projects.html
@@ -20,35 +20,35 @@
             <p><i>As part of <a href="http://crhim.canerivernha.org">this</a> past project for the Cane River National Heritage Area I converted some old oral history interviews to mp3. They are real treasures, and there are many more out there. They were originally recorded as part of the Retired Senior Volunteer Project, and are currently housed in the Cammie G. Henry Research Library.</i></p>
         </div>
         <div class="col-xs-12 col-sm-6 audio-column">
-                <p><strong>Dr. Jolly Harper, 8/28/1975</strong></p>
+                <h4>Dr. Jolly Harper, 8/28/1975</h4>
                 <div class="audioplayer">
                 <audio controls>
                 <source src="https://s3-us-west-2.amazonaws.com/natchdata/audio/jolly_harper.mp3" type="audio/mpeg" />
                 </div>
         </div>
         <div class="col-xs-12 col-sm-6 audio-column">
-                <p><strong>Mr. Ray Reins, 8/28/1975</strong></p>
+                <h4>Mr. Ray Reins, 8/28/1975</h4>
                 <div class="audioplayer">
                 <audio controls>
                 <source src="https://s3-us-west-2.amazonaws.com/natchdata/audio/ray_reins.mp3" type="audio/mpeg" />
                 </div>
         </div>
         <div class="col-xs-12 col-sm-6 audio-column">
-                <p><strong>Mr. Clifford Blake, 9/2/1975</strong></p>
+                <h4>Mr. Clifford Blake, 9/2/1975</h4>
                 <div class="audioplayer">
                 <audio controls>
                 <source src="https://s3-us-west-2.amazonaws.com/natchdata/audio/clifford_blake.mp3" type="audio/mpeg" />
                 </div>
         </div>
         <div class="col-xs-12 col-sm-6 audio-column">
-                <p><strong>Ms. Ruby Stumpft, 9/4/1975</strong></p>
+                <h4>Ms. Ruby Stumpft, 9/4/1975</h4>
                 <div class="audioplayer">
                 <audio controls>
                 <source src="https://s3-us-west-2.amazonaws.com/natchdata/audio/ruby_stumpft.mp3" type="audio/mpeg" />
                 </div>
         </div>
         <div class="col-xs-12 col-sm-6 audio-column">
-                <p><strong>Mr. Isaiah Jones, 10/14/1975</strong></p>
+                <h4>Mr. Isaiah Jones, 10/14/1975</h4>
                 <div class="audioplayer">
                 <audio controls>
                 <source src="https://s3-us-west-2.amazonaws.com/natchdata/audio/isaiah_jones.mp3" type="audio/mpeg" />
