improve style and content of default blog-related pages

--- a/theme/templates/tag.html
+++ b/theme/templates/tag.html
@@ -4,7 +4,7 @@
     <div class="page-header">
         <div class="content-header">
             <div id="title-block">
-                <h1>Articles tagged with {{ tag }} </h1>
+                <h1>tag: {{ tag }}</h1>
             </div>
         </div>
     </div>
