--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -2,13 +2,11 @@
 
 {% block title %}{{ SITENAME }} - Categories {% endblock %}
 
-
-
 {% block content %}
-    <h1>Categories for {{ SITENAME }}</h1>
+    <h1>article categories</h1>
     <ul class="tag-list">
     {%- for category, articles in categories|sort %}
-        <li><a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a> ({{ articles|count }})</li>
+        <li><a href="/{{ category.url }}">{{ category }}</a> ({{ articles|count }})</li>
     {% endfor %}
     </ul>
 {% endblock %}
