--- a/theme/templates/credits.html
+++ b/theme/templates/credits.html
@@ -1,5 +1,12 @@
-<div class="row footer-row">
+<div class="row footer">
     <div class="col-sm-12">
-        <p style="font-size:small"><a href="https://github.com/mradamcox">github</a> ~ <a href="https://observablehq.com/@mradamcox">observable</a> ~ <a href="https://www.twitter.com/mradamcox">twitter</a> ~ <a href="https://www.linkedin.com/in/mradamcox">linkedin</a> | updated {{PUBLISH_DATE}} | site powered by <a href="http://getpelican.com/">pelican</a></p>
+        <p>
+            <a href="https://github.com/mradamcox"><img src="/theme/img/github.png"></a>
+            <a href="https://observablehq.com/@mradamcox"><img src="/theme/img/observablehq.png"></a>
+            <a href="https://www.twitter.com/mradamcox"><img src="/theme/img/twitter.png"></a>
+            <a href="https://www.linkedin.com/in/mradamcox"><img src="/theme/img/li.png"></a>
+            <a class="email-address"><img src="/theme/img/email.png"></a>
+        </p>
+        <p style="font-size:small">last updated {{PUBLISH_DATE}} | site powered by <a href="http://getpelican.com/">pelican</a></p>
     </div>
 </div>
