--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -30,7 +30,11 @@ html {
 }
 
 body {
-    background-color: #BDA691;
+    /* retain this color for the theme in general, but use the image for background instead */
+    /* background-color: #BDA691; */
+    background: url('/theme/img/persian-pattern-lightmauve.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     margin-top: 0px;
     padding-top: 0px;
     font-family: 'Lato', sans-serif;
@@ -43,7 +47,7 @@ h1, h2, h3, h4, h5 {
 
 p {
     font-size: 16px;
-    
+
 }
 
 .container {
