add favicon, footer update

--- a/theme/templates/credits.html
+++ b/theme/templates/credits.html
@@ -7,6 +7,6 @@
             <a href="https://www.linkedin.com/in/mradamcox"><img src="/theme/img/li.png"></a>
             <a class="email-address"><img src="/theme/img/email.png"></a>
         </p>
-        <p style="font-size:small">last updated {{PUBLISH_DATE}} | site powered by <a href="http://getpelican.com/">pelican</a></p>
+        <p style="font-size:small">site updated {{PUBLISH_DATE}} | powered by <a href="http://getpelican.com/">pelican</a></p>
     </div>
 </div>
