standardize all page titles

--- a/theme/templates/authors.html
+++ b/theme/templates/authors.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}People{%endblock%}
+{% block title %}People - {{ SITENAME }}{%endblock%}
 
 {% block pageheader %}
 <div class="hp-header-inner">
