--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ SITENAME }} - Categories {% endblock %}
+{% block title %}Categories - {{ SITENAME }} {% endblock %}
 
 {% block content %}
     <h1>article categories</h1>
@@ -13,4 +13,4 @@
 
 {% block footer %}
 {% include 'credits.html' %}
-{% endblock %} 
+{% endblock %}
