--- a/theme/templates/tags.html
+++ b/theme/templates/tags.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ SITENAME }} - Tags{% endblock %}
+{% block title %}Tags - {{ SITENAME }}{% endblock %}
 
 {% block content %}
     <h1>article tags</h1>
@@ -13,4 +13,4 @@
 
 {% block footer %}
 {% include 'credits.html' %}
-{% endblock %} 
+{% endblock %}
