rearrange static files and remove all unnecessary ones

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="/theme/css/plugins/bootstrap.min.css">
+   <!-- jQuery library -->
+    <script src="/theme/plugins/jquery/jquery.min.js"></script>
 
-    <!-- jQuery library -->
-    <script src="/theme/js/plugins/jquery.min.js"></script>
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="/theme/plugins/bootstrap/bootstrap.min.css">
+    <script src="/theme/plugins/bootstrap/bootstrap.min.js"></script>
 
-    <!-- Latest compiled JavaScript -->
-    <script src="/theme/js/plugins/bootstrap.min.js"></script>
-
-    <!-- webstie css -->
+    <!-- website css -->
     <link rel="stylesheet" href="/theme/css/main.css">
-    <link rel="stylesheet" href="/theme/css/panel.css">
     <link rel="stylesheet" href="/theme/css/map.css">
 
     {% block head %}
