--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -6,10 +6,18 @@
 
 {% set cnt = 0 %}
 
-<section class="article">
-{% if page %}
-{{page.content}}
-{% endif %}
+<section class="article" style="display: flex; flex: 1;">
+    <div style="flex: 1; order: 1">
+      {% if page %}
+      {{page.content}}
+      {% endif %}
+    </div>
+    <!-- <div style="order: 2; flex: 0 0 20vw; padding: 10px;">
+      <div style="border-radius: 7px; background-color: rgba(255,255,255,.5)">
+      <img src="/theme/img/ac_headshot.jpg" style="height: 200px;" />
+      <a class="email-address"></a> | <a href="pages/cv.html">C.V.</a>
+      </div>
+    </div> -->
 </section>
 
 {% endblock content %}
