--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -23,8 +23,8 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+
 html {
-    font-family: Georgia;
     padding: 0;
     margin: 0;
 }
@@ -37,22 +37,27 @@ body {
     margin-top: 0px;
     padding-top: 0px;
     font-family: 'Lato', sans-serif;
+    line-height: 1.5;
+    color: #333;
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Carter One', cursive;
     font-family: 'Acme', sans-serif;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    line-height: 1.1;
 }
 
 p {
     font-size: 16px;
-
+    margin: 0 0 10px;
 }
 
 .container {
+    /* display: flex; */
     max-width: 875px;
     margin: 0px auto 25px auto;
-    padding-top:0px;
     background-color: #F8F7BF;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
@@ -60,11 +65,14 @@ p {
 }
 
 .content {
-
+  padding: 20px;
 }
 
 /* NAVIGATION BAR */
-.topbar{
+.topbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     z-index: 1;
     border: none;
     border-bottom-left-radius: 7px;
@@ -72,46 +80,21 @@ p {
     box-shadow: 0px 0px 2px 1px #333;
 }
 
-.toplist {
-    list-style:none;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding:0;
-    width: 875px;
-}
-
-.toplist li {
-      padding-bottom: 5px;
-      padding-top: 5px;
-      display: inline;
-      margin: 0;
-      float: left;
-      width: 25%;
-      text-align: center;
-      background-color: #9CABA1;
-}
-
-.toplist a {
-    overflow:hidden;
-    margin:0;
-    text-decoration:none;
-    text-align:center;
-    font-weight:bold;
-    font-style:normal;
-    font-size:20px;
-    color: black;
-}
-
 .nav-btn {
       padding-bottom: 5px;
       padding-top: 5px;
-      display: inline;
       margin: 0;
-      float: left;
       text-align: center;
       background-color: #9CABA1;
+      width: 100%;
+}
+
+.nav-btn-first {
+  border-bottom-left-radius:7px;
+}
+
+.nav-btn-last {
+  border-bottom-right-radius:7px;
 }
 
 .nav-btn.mobile-last {
