improve some site formatting

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -52,7 +52,7 @@
     {% block content %}
     {% endblock %}
     </div>
-    <hr>
+    <div style="padding:0px 20px 20px 20px"><hr></div>
     {% block footer %}
     <div class="row footer">
       <p>
@@ -69,7 +69,7 @@
 <script>
 
 window.onload = function() {
-  const c1 = "mr.adamcox";
+    const c1 = "mr.adamcox";
     const c2 = "@";
     const c3 = "gmail.com";
     const email = c1+c2+c3
