--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -97,8 +97,33 @@ hr {
     box-shadow: 0px 0px 2px 2px #333;
 }
 
+.content-wrapper {
+    display: flex;
+    align-items: center;
+}
+
 .content {
   padding: 20px;
+}
+
+.sidebar {
+    margin-top: 15px;
+    padding: 10px;
+    background: #FFFFFF78;
+    box-shadow: 0px 0px 2px 1px #a0a0a04f;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+.sidebar span {
+    font-style: italic;
+    text-align: center;
+}
+
+.sidebar ul {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-left: 30px;
 }
 
 /* NAVIGATION BAR */
